# location_service

./: .gitignore  CMakeLists.txt  Dockerfile  main.cc  main.cpp  properties.json  protoc.Dockerfile
proto/: location.proto
src/: Environment.h  GrprcServer.cc  GrprcServer.cpp  GrprcServer.h  PropertiesLoader.h  SearchLocationQueryBuilder.cpp  SearchLocationQueryBuilder.h
